# flask-batteries

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  destroy.py  new.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
docs/source/: conf.py  index.rst
src/flask_batteries/: __init__.py  config.py  flask_batteries.py  helpers.py  webpack.py
src/flask_batteries/commands/: __init__.py  build.py  destroy.py  generate.py  install.py  new.py  translate.py  uninstall.py  webpack.py
src/flask_batteries/generators/: __init__.py  base_generator.py  model_generator.py  route_generator.py  stylesheet_generator.py
src/flask_batteries/installers/: __init__.py  base_installer.py  flask_babel.py  flask_login.py  flask_mail.py  flask_marshmallow.py  flask_migrate.py  flask_sqlalchemy.py  flask_talisman.py  flask_wtf.py
src/flask_batteries/template/: .gitignore  README.md  package.json  webpack.config.js
src/flask_batteries/template/src/: __init__.py  config.py
src/flask_boot/: __init__.py  destroy.py  new.py
src/flask_boot/commands/: __init__.py  build.py  destroy.py  generate.py  install.py  new.py  uninstall.py  watch.py
src/flask_boot/installers/: __init__.py  base_installer.py  flask_sqlalchemy.py
src/flask_boot/template/: README.md  main.py  package.json  webpack.config.js
src/flask_boot/template/src/: __init__.py  config.py
src/flask_boot/template/src/commands/: build.py  (+3 more)
src/flask_boot/template/test/: fixtures.py
src/flask_boot/template/tests/: fixtures.py
template/: README.md
tests/: conf_tests.py  test_helpers.py  test_new.py
tests/commands/: test_destroy.py  test_generate.py  test_new.py  test_translate.py
tests/generators/: test_model_generator.py  test_route_generator.py  test_stylesheet_generator.py
tests/installers/: test_flask_babel.py  test_flask_login.py  test_flask_mail.py  test_flask_marshmallow.py  test_flask_migrate.py  test_flask_sqlalchemy.py  test_flask_talisman.py  test_flask_wtf.py
(+26 files in other folders)
