[metadata]
name = flask-boot
version = 1.0.0
author = Grayden Shand
author_email = graydenshand@gmail.com
description = A simple command line tool for bootstrapping flask applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://graydenshand.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
include_package_data=True
python_requires = >=3.6
install_requires =
    requests
    click
    pathspec
    jinja2
    Flask

[options.packages.find]
where = src

[options.entry_points]
flask.commands =
    destroy = flask_boot:destroy
    generate = flask_boot:generate
    install = flask_boot:install
    new = flask_boot:new
    uninstall = flask_boot:uninstall
    watch = flask_boot:watch