[metadata]
name = Flask-Batteries
version = 0.0.0
author = Grayden Shand
author_email = graydenshand@gmail.com
description = A simple command line tool for bootstrapping flask applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/graydenshand/flask-batteries
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
include_package_data=True
python_requires = >=3.6
install_requires =
    requests
    click
    pathspec
    jinja2
    Flask
    SQLAlchemy-Utils
    psycopg2

[options.packages.find]
where = src

[options.entry_points]
flask.commands =
    destroy = flask_batteries:destroy
    generate = flask_batteries:generate
    install = flask_batteries:install
    new = flask_batteries:new
    uninstall = flask_batteries:uninstall
    webpack = flask_batteries:webpack